Fix text alignment in large size alerts

--- a/less/alerts.less
+++ b/less/alerts.less
@@ -70,9 +70,10 @@
 	
 	// large variant
 	&.large {
+		display: flex;
 
 		.alert-icon {
-			float: left;
+			flex: 0 1 auto;
 			margin-right: 15px;
 			color: @gray-d2;
 
@@ -80,6 +81,10 @@
 				font-size: 32px;
 				line-height: 32px;
 			}
+		}
+
+		.alert-text {
+			flex: 1 1 auto;
 		}
 
 		&.accent .alert-icon {
